# petlog

./: .env.example  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
petlog/: celery.py  settings.py  urls.py  views.py
petlog/logger/: forms.py  models.py  tasks.py  urls.py  views.py
petlog/logger/migrations/: 0001_initial.py  0002_alter_vaccine_next_dose.py  0002_remove_medicine_periodicty_entry_created_on_and_more.py  0002_vaccine_next_dose.py  0003_alter_entry_created_on_alter_medicine_created_on_and_more.py  0003_vaccine_remind_me.py
petlog/petlog/: asgi.py  settings.py  urls.py  wsgi.py
petlog/petlog/logger/: admin.py  models.py
petlog/petlog/logger/migrations/: 0001_initial.py
petlog/petlog/pets/: models.py
petlog/petlog/pets/migrations/: 0001_initial.py  0002_pet_owner.py  0003_remove_pet_created_on_remove_pet_updated_on.py  (+1 more)
petlog/pets/: admin.py  models.py  urls.py  views.py
petlog/pets/migrations/: 0001_initial.py  0005_pet_created_on.py
petlog/static/: base.css
petlog/static/home/: home.css
petlog/templates/: base.html
petlog/templates/home/: home.html
petlog/templates/logger/: create_entry.html  create_training.html  create_vaccine.html  delete_entry.html  delete_training.html  delete_vaccine.html
petlog/templates/pets/: create.html  index.html
petlog/templates/registration/: logged_out.html  login.html  signup.html
scheduler_field/: commands.py  fields.py  models.py
scheduler_field/migrations/: 0001_initial.py  0002_rename_function_name_schedulerdatemanager_method_name.py
